# HB_Zayfer

./: CHANGELOG.md  Cargo.toml  README.md
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: ed25519.rs  format.rs  keystore.rs  rsa.rs  x25519.rs
docs/: ARCHITECTURE.md  CLI.md  CONTRIBUTING.md  HBZF_FORMAT.md  PYTHON_API.md  README.md  RUST_API.md  SECURITY.md  WEB_GUI.md
python/hb_zayfer/gui/: settings_view.py
python/hb_zayfer/web/: app.py
python/hb_zayfer/web/static/: app.js
