[workspace]
members = ["crates/core", "crates/cli", "crates/python"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["HB_Zayfer Contributors"]
license = "MIT"
description = "A full-featured encryption/decryption suite"

[workspace.dependencies]
# Crypto primitives (RustCrypto family)
rsa = { version = "0.9", features = ["sha2"] }
signature = "2"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8", "pem"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
argon2 = "0.5"
scrypt = "0.11"

# OpenPGP
sequoia-openpgp = { version = "1", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }

# Key serialization
pkcs8 = { version = "0.10", features = ["pem", "encryption"] }
pkcs1 = { version = "0.7", features = ["pem"] }

# Security
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }

# Serialization & encoding
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
pem = "3"
hex = "0.4"

# Error handling
thiserror = "1"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
indicatif = "0.17"

# PyO3
pyo3 = { version = "0.28", features = ["extension-module"] }

# Misc
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
toml = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
